<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/main_layout_new_product">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabTwo"
        style="@style/fab_view"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_content_save_white_24dp"/>

    <LinearLayout
        style="@style/main_layout_new_product">

        <ImageView
            android:id="@+id/add_image"
            style="@style/image_new_product"
            android:src="@drawable/add_image"/>

        <LinearLayout
            style="@style/layout_secondary_new_product">

            <LinearLayout
                style="@style/layout_new_product"
                android:weightSum="1">

                <TextView
                    android:id="@+id/name_text_view"
                    style="@style/description_text"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/info_text_view"
                    style="@style/description_text"
                    android:text="@string/info"/>

                <TextView
                    android:id="@+id/price_text_view"
                    style="@style/description_text"
                    android:text="@string/price"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/description_text"
                    android:text="@string/q"/>
            </LinearLayout>

            <LinearLayout
                style="@style/layout_new_product">

                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/edit_text"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/info_edit_text"
                    style="@style/edit_text"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/price_edit_text"
                    style="@style/edit_text"
                    android:hint="@string/currency"
                    android:inputType="number|numberDecimal"/>

                <LinearLayout
                    style="@style/layout_quantity_new">

                    <ImageView
                        android:id="@+id/reduce"
                        style="@style/button_image_view"
                        android:background="@drawable/shape_red"
                        android:src="@drawable/ic_minus_white_48dp"/>

                    <EditText
                        android:id="@+id/quantity_edit_text"
                        style="@style/edit_quantity_view"/>

                    <ImageView
                        android:id="@+id/addButton"
                        style="@style/button_image_view"
                        android:background="@drawable/shape_green"
                        android:src="@drawable/ic_plus_white_24dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>